objects/nFORCE__Business_Activity__c.object
<CustomObject>
    <description>This object indicates the individual business activity that the system runs as part of a business process.</description>
    <fields>
        <fullName>nFORCE__Business_Process__c</fullName>
        <description>The user populates this master-detail relationship field to indicate the business activity&apos;s corresponding business process.</description>
        <inlineHelpText>Enter the name of the business process you want to associate with the business activity.</inlineHelpText>
        <label>Business Process</label>
        <referenceTo>nFORCE__Business_Process__c</referenceTo>
        <relationshipLabel>Business Process Activities</relationshipLabel>
        <relationshipName>Business_Process</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nFORCE__Chain_State_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this optional checkbox field to indicate if the state data from this business activity should be passed to the next business activity. By default, it is false.</description>
        <inlineHelpText>When set to true, this checkbox indicates that state data from this business activity should be passed to the next business activity.</inlineHelpText>
        <label>Chain State Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Description__c</fullName>
        <description>The user populates this optional text field to indicate the description of the business activity. By default, it is blank.</description>
        <inlineHelpText>This text field indicates the purpose of the business activity.</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Expected_Child_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The user populates this optional number field with the number of expected child business activities (success or error) the business activity parent has. By default, it is zero.</description>
        <inlineHelpText>This number field indicates how many expected child business activities this business activity has.</inlineHelpText>
        <label>Expected Child Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__FQCN__c</fullName>
        <description>The user populates this required text field with the fully qualified class name of the business activity&apos;s handler.</description>
        <inlineHelpText>This text field indicates the fully qualified class name of the business activity&apos;s handler.</inlineHelpText>
        <label>Fully Qualified Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Scheduled_Single_Run__c</fullName>
        <defaultValue>true</defaultValue>
        <description>The user populates this optional checkbox field to indicate if the system should schedule the business activity for a single run.  If set to true, it will run once, otherwise it will run on a recurring basis. By default, it is true.</description>
        <inlineHelpText>This checkbox field indicates if the system should schedule the business activity to run once.</inlineHelpText>
        <label>Is Scheduled Single Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Is_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this optional checkbox field to indicate if the system should schedule to run the business activity at a particular time. By default, it is false.</description>
        <inlineHelpText>This checkbox field indicates if the system should schedule the business activity to run at a particular time.</inlineHelpText>
        <label>Is Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Perform_Async__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this optional checkbox field to indicate if the business activity should run asynchronously. By default, it is false.</description>
        <inlineHelpText>This optional checkbox field indicates if the business activity should run asynchronously.</inlineHelpText>
        <label>Perform Async</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__Scheduled_CRON_Expr__c</fullName>
        <description>The user populates this optional text field with the cron expression that represents the date and time that the scheduled business activity should run. By default, it is blank.</description>
        <inlineHelpText>This text field that indicates the date/time cron expression when the scheduled business activity should run.</inlineHelpText>
        <label>Scheduled CRON Expression</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Scheduled_Seconds_From_Now__c</fullName>
        <description>The user populates this optional number field to indicate the amount of seconds from now when the scheduled business activity should run. By default, this field is blank.</description>
        <inlineHelpText>This number field indicates how many seconds from now the business activity should run.</inlineHelpText>
        <label>Scheduled Seconds From Now</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Sort_Order__c</fullName>
        <description>The user populates this optional number field to indicate what order within the business process this business activity should run. By default, it is blank.</description>
        <inlineHelpText>This number field indicates the order in which the business activity should run.</inlineHelpText>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nFORCE__Status__c</fullName>
        <description>The user populates this required picklist field to indicate the status of the business activity. By default, it is Queued.</description>
        <inlineHelpText>This picklist field indicates the status of the business activity.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                    <default>true</default>
                    <label>Queued</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Completed With Errors</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nFORCE__Wait_For_External_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user populates this checkbox to indicate that the business activity should remain in progress until an external process updates the status to continue. By default, it is false.</description>
        <inlineHelpText>This checkbox indicates that the business activity should remain in progress until an external process updates the status to continue.</inlineHelpText>
        <label>Wait For External Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nFORCE__lookupKey__c</fullName>
        <description>This field contains an external identifier that is used to associate the record with the correlating record in an external system. The Lookup Key can also be used to identify related records when importing data into nCino without the need to know the internal ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field contains the External ID for the Business Activity.</inlineHelpText>
        <label>Lookup Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Business Activity</label>
    <listViews>
        <fullName>nFORCE__All_Business_Activities</fullName>
        <columns>NAME</columns>
        <columns>nFORCE__Business_Process__c</columns>
        <columns>nFORCE__Sort_Order__c</columns>
        <columns>nFORCE__FQCN__c</columns>
        <columns>nFORCE__Is_Scheduled__c</columns>
        <columns>nFORCE__Perform_Async__c</columns>
        <columns>nFORCE__Wait_For_External_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Business Activities</label>
    </listViews>
    <nameField>
        <label>Business Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>nFORCE__Enforce_Unique_Name</fullName>
        <active>true</active>
        <description>This validation rule enforces that the business activities field name is unique.</description>
        <errorConditionFormula>AND (
			IF($Setup.nFORCE__Business_Process_Settings__c.nFORCE__Disable_Validation_Rules__c,
				FALSE,
				((ISNEW() || ISCHANGED(Name))
				&amp;&amp; VLOOKUP( $ObjectType.nFORCE__Business_Activity__c.Fields.Name, $ObjectType.nFORCE__Business_Activity__c.Fields.Name , Name) = Name)
			)
		)</errorConditionFormula>
        <errorMessage>The business activity name must be unique. Check the name and try again.</errorMessage>
    </validationRules>
</CustomObject>